@@ -19,6 +19,7 @@ v8.0.32
 - BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
 - BUG#30089671: Fix decoding VARBINARY columns when using a prepared cursor
 - BUG#28020811: Fix multiple reference leaks in the C extension
+- BUG#24364556: Improve warning behavior
 
 v8.0.31
 =======
